--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <div class="card">
         <h3>2. وسيلة الدفع</h3>
         <div class="pay-flex">
-            <div class="pay-opt" onclick="selN(this, 'Orange')">Orange (*9)</div>
-            <div class="pay-opt" onclick="selN(this, 'Inwi')">Inwi (*9)</div>
+            <div class="pay-opt" onclick="selN(this, 'Orange')">Orange</div>
+            <div class="pay-opt" onclick="selN(this, 'Inwi')">Inwi</div>
         </div>
     </div>
 
